--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>TogglTimeSheet</groupId>
     <artifactId>TogglTimeSheet</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,6 +22,24 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- Enables GitFlow goals in Maven -->
+                <groupId>external.atlassian.jgitflow</groupId>
+                <artifactId>jgitflow-maven-plugin</artifactId>
+                <version>1.0-m5.1</version>
+                <configuration>
+                    <flowInitContext>
+                         <masterBranchName>master</masterBranchName>
+                         <developBranchName>develop</developBranchName>
+                         <featureBranchPrefix>feature-</featureBranchPrefix>
+                         <releaseBranchPrefix>release-</releaseBranchPrefix>
+                         <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+                         <versionTagPrefix>v</versionTagPrefix>              
+                    </flowInitContext>
+                    <noDeploy>true</noDeploy>
                 </configuration>
             </plugin>
 
