Added version lable in login GUI. Updated pom-file and more accoringly to support templates (https://blog.soebes.de/blog/2014/01/02/version-information-into-your-appas-with-maven/)

--- a/pom.xml
+++ b/pom.xml
@@ -30,16 +30,31 @@
                 <version>1.0-m5.1</version>
                 <configuration>
                     <flowInitContext>
-                         <masterBranchName>master</masterBranchName>
-                         <developBranchName>develop</developBranchName>
-                         <featureBranchPrefix>feature-</featureBranchPrefix>
-                         <releaseBranchPrefix>release-</releaseBranchPrefix>
-                         <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
-                         <versionTagPrefix>v</versionTagPrefix>              
+                        <masterBranchName>master</masterBranchName>
+                        <developBranchName>develop</developBranchName>
+                        <featureBranchPrefix>feature-</featureBranchPrefix>
+                        <releaseBranchPrefix>release-</releaseBranchPrefix>
+                        <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+                        <versionTagPrefix>v</versionTagPrefix>              
                     </flowInitContext>
                     <noDeploy>true</noDeploy>
                 </configuration>
             </plugin>
+            
+            <plugin>
+                <!-- Plugin generating a Java source file containg version information version -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>templating-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <executions>
+                    <execution>
+                        <id>generate-verion-class</id>
+                        <goals>
+                            <goal>filter-sources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>            
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -84,13 +99,15 @@
                 <executions>
                     <execution>
                         <phase>package</phase>
-                        <goals><goal>launch4j</goal></goals>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
                         <configuration>
                             <headerType>gui</headerType>
-                            <outfile>target/TogglTimeSheet-1.0.1.exe</outfile>
+                            <outfile>target/TogglTimeSheet-${project.version}.exe</outfile>
                             <icon>src/main/resources/icons/app_icon/logo.ico</icon>
                             <!-- !!!!!!   Update this when version changes  !!!!!-->
-                            <jar>target/TogglTimeSheet-1.0.1.jar</jar>
+                            <jar>target/TogglTimeSheet-${project.version}.jar</jar>
                             <errTitle>TogglTimeSheet</errTitle>
                             <classPath>
                                 <mainClass>UnemployedVoodooFamily.Main</mainClass>
@@ -134,7 +151,9 @@
                     <execution>
                         <id>assembly</id>
                         <phase>package</phase>
-                        <goals><goal>single</goal></goals>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                         <configuration>
                             <descriptors>
                                 <descriptor>assembleWinPortable.xml</descriptor>
